search-room: move styles; add paddings to fix bug
move __filter-container's styles to __filter's styles;
bug fix: add left & right 7px paddings because range slider's handles were cropped by search-room's left & right bounds; move aside element -7px by x-axis to compensate added paddings

--- a/src/pages/website-pages/search-room/search-room.scss
+++ b/src/pages/website-pages/search-room/search-room.scss
@@ -37,40 +37,39 @@
   }
 
   &__filter {
+    grid-area: filter;
+    position: sticky;
+    top: 5px;
+    height: calc(100vh - 10px);
+    width: fit-content;
+    overflow: auto;
+    padding: 0 7px;
+    transform: translateX(-7px);
 
-    &-container {
-      grid-area: filter;
-      position: sticky;
-      top: 5px;
-      height: calc(100vh - 10px);
+    @media (max-width: $hd) {
+      display: none;
+    }
+
+    @media (max-width: $tablet) {
+      grid-area: main;
       width: fit-content;
-      overflow: auto;
+      z-index: 899;
+      background-color: #fff;
+      padding: 10px;
+      border: $inputBorder;
+      border-radius: 4px;
+      box-shadow: $lightShadow;
+    }
 
-      @media (max-width: $hd) {
-        display: none;
-      }
+    @media (max-width: $mobileL) {
+      left: 40px;
+    }
 
-      @media (max-width: $tablet) {
-        grid-area: main;
-        width: fit-content;
-        z-index: 899;
-        background-color: #fff;
-        padding: 10px;
-        border: $inputBorder;
-        border-radius: 4px;
-        box-shadow: $lightShadow;
-      }
-
-      @media (max-width: $mobileL) {
-        left: 40px;
-      }
-
-      @media (max-width: $mobileS) {
-        padding: 5px;
-        top: 10px;
-        height: calc(100vh - 10px);
-        transform: translateX(5px);
-      }
+    @media (max-width: $mobileS) {
+      padding: 5px;
+      top: 10px;
+      height: calc(100vh - 10px);
+      transform: translateX(5px);
     }
 
     &-component {
@@ -137,7 +136,7 @@
               / 266px 1fr
               ;
 
-            .search-room__filter-container {
+            .search-room__filter {
               display: block;
             }
           }
